# gl-reconciliation

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
dagster_pipeline/: __init__.py  assets.py  definitions.py  resources.py  schedules.py  sensors.py
data_generator/: __init__.py  cli.py  config.py  gl.py  inject_breaks.py  loader.py  logging_setup.py  pipeline.py  reference.py  subledgers.py  utils.py
db/init/: 01_schemas.sql  02_dimensions.sql  03_subledgers.sql  04_gl.sql  05_audit.sql
dbt_project/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt_project/macros/: assert_balanced.sql  categorize_break.sql  get_tolerance.sql
dbt_project/models/: _sources.yml
dbt_project/models/marts/recon/: _recon.yml  recon_aging.sql  recon_control_account.sql  recon_fx_revaluation.sql  recon_manual_je_flag.sql  recon_roll_forward.sql  recon_summary.sql  recon_suspense_monitor.sql  recon_transaction_level.sql  recon_variance_analysis.sql
dbt_project/models/staging/: _staging.yml  stg_ap_accruals.sql  stg_ap_invoices.sql  stg_ap_payments.sql  stg_ar_credit_memos.sql  stg_ar_invoices.sql  stg_ar_receipts.sql  stg_dim_account.sql  stg_dim_entity.sql  stg_fx_rate.sql  stg_gl_journal.sql  stg_inv_transactions.sql
dbt_project/seeds/: _seeds.yml  materiality.csv  tolerance_rules.csv
dbt_project/snapshots/: chart_of_accounts_snapshot.sql
dbt_project/tests/: assert_gl_journal_balanced.sql  assert_no_orphan_breaks.sql  assert_subledger_postings_balanced.sql
docs/: architecture.md  conf.py  data_generator.md  data_model.md  dbt_project.md  development.md  getting_started.md  index.md  orchestration.md  recon_cockpit.md  reconciliation_engine.md  troubleshooting.md
docs/_static/: custom.css
docs/reference/: cli.md  configuration.md  makefile.md
recon_engine/: __init__.py  alerts.py  audit.py  cli.py  evidence.py  materiality.py
streamlit_app/: Home.py
streamlit_app/lib/: __init__.py  db.py  format.py
streamlit_app/pages/: 1_Recon_Scorecard.py  2_Break_Detail.py  3_Aging_Report.py  4_Auditor_Evidence.py
tests/: test_alerts.py  test_audit.py  test_evidence.py  test_pipeline_smoke.py
