[project]
name = "gl-reconciliation"
version = "0.1.0"
description = "Daily General Ledger reconciliation pipeline (AP/AR/Inventory vs GL) with reconciliation-as-code, tolerance-based matching, multi-currency FX, and SOX-style audit trail."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [{ name = "Vijaya Supreetha Gurrala" }]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "typer>=0.12",
    "rich>=13.7",
    "Faker>=26.0",
    "numpy>=2.0",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
dbt = [
    "dbt-core>=1.8,<1.10",
    "dbt-postgres>=1.8,<1.10",
]

[project.scripts]
glrecon-data = "data_generator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_generator", "recon_engine"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = [
    "E501",  # Line length is enforced by formatter, not linter.
    "B008",  # Typer's idiomatic API uses function calls in argument defaults.
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
